# libffuzzy

./: .gitattributes  .gitignore  COPYING  Doxyfile.example  Makefile.am  NEWS  README  configure.ac  ffuzzy.h  ffuzzy_blocksize.c  ffuzzy_blocksize.h  ffuzzy_compare.c  ffuzzy_digest.c  ffuzzy_digest_conv.c  ffuzzy_digest_unnorm.c  ffuzzy_parse.c  ffuzzy_parse.h  ffuzzy_parse_unnorm.c  str_base64.h  str_common_substr.h  str_edit_dist.h  str_elim_seq.h  str_hash_rolling.h  util.h
examples/internal/: edit_distn.c  has_common_substring.c
